--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.Tech</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> ar2553449@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Job:</strong> Available</li>
                 </ul>
               </div>
             </div>
@@ -251,7 +251,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">node <i class="val">70%</i></span>
+              <span class="skill">JQUERY <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -330,7 +330,7 @@
               <h4>Aman Kumar</h4>
               <p><em>
                   I am currently working as a software engineer in Tekenlight Solutions Pvt. Ltd.
-                  where I am report to the manager, along with this I am also mentoring 3-4 joinees at parallely
+                  where I report to the manager, along with this I am also mentoring 3-4 joinees parallely
                 </em></p>
               <ul>
                 <li>Amroha, Uttar Pradesh, INDIA</li>
@@ -376,7 +376,7 @@
                   Coded software updates and robust solutions based no detailed design specifications(Full Stack).
                 </li>
                 <li>
-                  Independently deveoped and implemented <b>Build and Deploy system</b> for the product.
+                  Independently developed and implemented <b>Build and Deploy system</b> for the product.
                 </li>
                 <li>
                   Upgraded old codebases in accordance with modern development practices.
@@ -408,7 +408,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>I'm available for freelance work. For all inquiries or suitable work, please email me using the below
+          <p>I'm available for full-time(after serving notice period in my current organisation). For all inquiries or suitable work, please email me using the below
             contact form.</p>
         </div>
 
